--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@google/genai": "^1.19.0",
     "xlsx": "^0.18.5",
     "papaparse": "^5.4.1",
-    "@vercel/node": "^5.3.22"
+    "@vercel/node": "^5.3.22",
+    "@supabase/supabase-js": "2"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
